Improves template handling and JSON formatting
Adds a dedicated function to extract template descriptions for consistent reuse and improved maintainability.

Updates template listing and detail commands to use the new extraction function and validates template names to enhance security by preventing path traversal.

Enhances JSON formatting by prioritising proper pretty-printing with external tools when available, falling back to basic formatting otherwise.

Clarifies ShellCheck configuration to better reflect zsh script support and disables irrelevant warnings to reduce noise during linting.

Ensures database naming test accounts for edge cases near the MySQL 64-character limit.

These improvements streamline code clarity, robustness, and user feedback in template management and output formatting.

--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -1,7 +1,9 @@
 # ShellCheck configuration for wt-worktree-manager
 # https://www.shellcheck.net/wiki/
 
-# The script is zsh, not bash
+# The scripts are written for zsh. ShellCheck doesn't fully support zsh,
+# so we use 'shell=bash' as the closest approximation for linting.
+# Many zsh-specific warnings are disabled below.
 shell=bash
 
 # Disable specific warnings that don't apply to zsh or are intentional
